--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
       <form action="/" method="post">
-        <section> <img src="pic/checked.png" style="width: 350px; margin-left: 38%; margin-top: 8%;">
+        <section> <img src="checked.png" style="width: 350px; margin-left: 38%; margin-top: 8%;">
 </section>
 
 
