--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
   
     <body>
-        <section> <img src="pic/checked.png" style="width: 350px; margin-left: 38%; margin-top: 8%;">
+        <section> <img src="checked.png" style="width: 350px; margin-left: 38%; margin-top: 8%;">
 </section>
        
      
